--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Academic Project Page</title>
+  <title>MULTIMODAL SEMANTIC-AWARE AUTOMATIC COLORIZATION WITH DIFFUSION PRIOR</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -52,21 +52,26 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">MULTIMODAL SEMANTIC-AWARE AUTOMATIC COLORIZATION WITH DIFFUSION PRIOR</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+                <a> Han Wang</a>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                  <a href="" target="_blank">Xinning Chai</a>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
+                    <a href="" target="_blank">Yiwen Wang</a>,</span>
+                  <span class="author-block">
+                    <a href="" target="_blank">Yuhong Zhang</a>,</span>
+                    <span class="author-block">
+                      <a href="" target="_blank">Rong Xie</a>,</span>
+                      <span class="author-block">
+                        <a href="" target="_blank">Li Song</a><sup>*</sup></span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="author-block">Shanghai Jiao Tong University<br>ICMEW2024</span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding Author</small></span>
                   </div>
 
                   <div class="column has-text-centered">
@@ -83,7 +88,7 @@
                     </span>
 
                     <!-- Supplementary PDF link -->
-                    <span class="link-block">
+                    <!-- <span class="link-block">
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
@@ -91,16 +96,16 @@
                       </span>
                       <span>Supplementary</span>
                     </a>
-                  </span>
+                  </span> -->
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                    <a href="https://github.com/ColorDiff-Image" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Code(Coming Soon)</span>
                   </a>
                 </span>
 
@@ -123,22 +128,41 @@
 </section>
 
 
-<!-- Teaser video-->
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
-        <source src="static/videos/banner_video.mp4"
-        type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
-      </h2>
+<!-- Image carousel -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <h2 class="title is-4" align = "center">Showcases produced by our pipeline.</h2>
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+       <div class="item" align = "center">
+        <!-- Your image here -->
+        <img src="static/images/ours/000000000632.jpg" />
+      </div>
+     <div class="item" align = "center">
+      <!-- Your image here -->
+      <img src="static/images/ours/000000043816.jpg" alt="MY ALT TEXT"/>
     </div>
+    <div class="item" align = "center">
+      <!-- Your image here -->
+      <img src="static/images/ours/000000050679.jpg" alt="MY ALT TEXT"/>
+    </div>
+    <div class="item" align = "center">
+      <!-- Your image here -->
+      <img src="static/images/ours/000000061658.jpg" alt="MY ALT TEXT"/>
+    </div>
+    <div class="item" align = "center">
+      <!-- Your image here -->
+      <img src="static/images/ours/000000006040.jpg" alt="MY ALT TEXT"/>
+    </div>
+    <div class="item" align = "center">
+      <!-- Your image here -->
+      <img src="static/images/ours/000000008690.jpg" alt="MY ALT TEXT"/>
+   </div>
   </div>
+</div>
+</div>
 </section>
-<!-- End teaser video -->
+<!-- End image carousel -->
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
@@ -148,7 +172,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
+            Colorizing grayscale images offers an engaging visual experience. Existing automatic colorization methods often fail to generate satisfactory results due to incorrect semantic colors and unsaturated colors. In this work, we propose an automatic colorization pipeline to overcome these challenges. We leverage the extraordinary generative ability of the diffusion prior to synthesize color with plausible semantics. To overcome the artifacts introduced by the diffusion prior, we apply the luminance conditional guidance. Moreover, we adopt multimodal high-level semantic priors to help the model understand the image content and deliver saturated colors. Besides, a luminance-aware decoder is designed to restore details and enhance overall visual quality. The proposed pipeline synthesizes saturated colors while maintaining plausible semantics. Experiments indicate that our proposed method considers both diversity and fidelity, surpassing previous methods in terms of perceptual realism and gain most human preference.
           </p>
         </div>
       </div>
@@ -158,61 +182,20 @@
 <!-- End paper abstract -->
 
 
-<!-- Image carousel -->
+
+<!-- Youtube video -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          First image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Second image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Third image description.
-       </h2>
-     </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
-    </div>
-  </div>
-</div>
-</div>
-</section>
-<!-- End image carousel -->
-
-
-
-
-<!-- Youtube video -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
       <!-- Paper video. -->
-      <h2 class="title is-3">Video Presentation</h2>
+      <h2 class="title is-3">Framework</h2>
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
-          
-          <div class="publication-video">
-            <!-- Youtube embed code here -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </div>
+          <div class="item" align = "center">
+            <!-- Your image here -->
+            <img src="static/images/overview.png" alt="MY ALT TEXT"/>
+            <h2 class="content has-text-justified">Overview of the proposed automatic colorization pipeline. It combines a semantic prior generator (blue box), a high-level semantic guided diffusion model(yellow box), and a luminance-aware decoder (orange box).</h2>
+         </div>
         </div>
       </div>
     </div>
@@ -225,42 +208,57 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4"
-            type="video/mp4">
-          </video>
-        </div>
+      <h2 class="title is-3">Evaluations</h2>
+      <h2 class="title is-4">Qualitative</h2>
+      <div id="results-carousel" class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+        <div class="item" align = "center">
+          <!-- Your image here -->
+          <img src="static/images/pic1.png" alt="MY ALT TEXT"/>
+          <h2 class="content has-text-justified">Qualitative comparisons among 1)GAN-based method: InstColor, ChromaGAN, BigColor, 2)Transformer-based method: ColTran, CT2, 3)Diffusion-based method: ControlNet and Ours.</h2>
+       </div>
+      </div>
       </div>
     </div>
   </div>
 </section>
 <!-- End video carousel -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title is-4">Quantitative</h2>
+      <div id="results-carousel" class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+        <div class="item" align = "center">
+          <!-- Your image here -->
+          <img src="static/images/quan1.png" alt="MY ALT TEXT"/>
+       </div>
+      </div>
+      </div>
+    </div>
+  </div>
+</section>
 
+<section class="hero is-small">
+  <div class="hero-body">
+    <h2 class="title is-3">Ablation</h2>
+    <div class="container">
+      <div class="columns is-centered has-text-centered">
+       <div class="item" align = "center">
+        <!-- Your image here -->
+        <img src="static/images/ablation-1.png" />
+      </div>
 
+  </div>
+</div>
+</div>
+</section>
 
 
 
 
 <!-- Paper poster -->
-<section class="hero is-small is-light">
+<!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title">Poster</h2>
@@ -270,7 +268,7 @@
         
       </div>
     </div>
-  </section>
+  </section> -->
 <!--End paper poster -->
 
 
