--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
           <img src="static/images/pic1.png" alt="MY ALT TEXT"/>
           <h2 class="content has-text-justified">Qualitative comparisons among 1)GAN-based method: InstColor, ChromaGAN, BigColor, 2)Transformer-based method: ColTran, CT2, 3)Diffusion-based method: ControlNet and Ours.</h2>
        </div>
+       <div class="item" align = "center">
+        <!-- Your image here -->
+        <img src="static/images/us.png" alt="MY ALT TEXT"/>
+        <h2 class="content has-text-justified">User evaluations. To reflect human preferences, we randomly select 15 images from the COCO-Stuff val set for user study. For each image, the 7 results and ground truth are displayed to the user in a random order. Our method has a vote rate of 22.59%, which significantly outperforms other methods.</h2>
+     </div>
       </div>
       </div>
     </div>
@@ -254,7 +259,20 @@
 </div>
 </section>
 
-
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+       <div class="item" align = "center">
+        <!-- Your image here -->
+        <img src="static/images/pic2.png" />
+        <h2 class="content has-text-justified">Discussion on parameter i.</h2>
+      </div>
+</div>
+</div>
+</div>
+</section>
 
 
 <!-- Paper poster -->
