--- a/index.html
+++ b/index.html
@@ -66,25 +66,26 @@
                     <span class="author-block">
                       <a href="" target="_blank">Rong Xie</a>,</span>
                       <span class="author-block">
-                        <a href="" target="_blank">Li Song</a><sup>*</sup></span>
+                        <a href="https://scholar.google.com/citations?hl=zh-CN&user=jKIoTVoAAAAJ" target="_blank">Li Song</a><sup>*</sup></span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Shanghai Jiao Tong University<br>ICMEW2024</span>
+                    <!-- <span class="author-block">Shanghai Jiao Tong University<br>ICMEW2024</span> -->
+                    <span class="author-block">Shanghai Jiao Tong University</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding Author</small></span>
                   </div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
-                      <span class="link-block">
+                      <!-- <span class="link-block">
                         <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
                         <span>Paper</span>
-                      </a>
+                      </a> -->
                     </span>
 
                     <!-- Supplementary PDF link -->
@@ -134,30 +135,58 @@
     <h2 class="title is-4" align = "center">Showcases produced by our pipeline.</h2>
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
+        <div class="item" align = "center">
+          <!-- Your image here -->
+          <img src="static/images/ours/2/000000006771.jpg" alt="MY ALT TEXT"/>
+       </div>
        <div class="item" align = "center">
         <!-- Your image here -->
-        <img src="static/images/ours/000000000632.jpg" />
+        <img src="static/images/ours/2/000000008532.jpg" alt="MY ALT TEXT"/>
+     </div>
+     <div class="item" align = "center">
+      <!-- Your image here -->
+      <img src="static/images/ours/2/000000013348.jpg" alt="MY ALT TEXT"/>
+   </div>
+   <div class="item" align = "center">
+    <!-- Your image here -->
+    <img src="static/images/ours/2/000000017178.jpg" alt="MY ALT TEXT"/>
+ </div>
+ <div class="item" align = "center">
+  <!-- Your image here -->
+  <img src="static/images/ours/2/000000018380.jpg" alt="MY ALT TEXT"/>
+</div>
+<div class="item" align = "center">
+  <!-- Your image here -->
+  <img src="static/images/ours/2/000000043816.jpg" alt="MY ALT TEXT"/>
+</div>
+<div class="item" align = "center">
+  <!-- Your image here -->
+  <img src="static/images/ours/2/000000050380.jpg" alt="MY ALT TEXT"/>
+</div>
+<div class="item" align = "center">
+  <!-- Your image here -->
+  <img src="static/images/ours/2/000000050679.jpg" alt="MY ALT TEXT"/>
+</div>
+       <div class="item" align = "center">
+        <!-- Your image here -->
+        <img src="static/images/ours/1/000000026926.jpg" />
       </div>
      <div class="item" align = "center">
       <!-- Your image here -->
-      <img src="static/images/ours/000000043816.jpg" alt="MY ALT TEXT"/>
+      <img src="static/images/ours/1/000000071877.jpg" alt="MY ALT TEXT"/>
     </div>
     <div class="item" align = "center">
       <!-- Your image here -->
-      <img src="static/images/ours/000000050679.jpg" alt="MY ALT TEXT"/>
+      <img src="static/images/ours/1/000000081594.jpg" alt="MY ALT TEXT"/>
     </div>
     <div class="item" align = "center">
       <!-- Your image here -->
-      <img src="static/images/ours/000000061658.jpg" alt="MY ALT TEXT"/>
+      <img src="static/images/ours/1/000000087742.jpg" alt="MY ALT TEXT"/>
     </div>
     <div class="item" align = "center">
       <!-- Your image here -->
-      <img src="static/images/ours/000000006040.jpg" alt="MY ALT TEXT"/>
+      <img src="static/images/ours/1/000000098633.jpg" alt="MY ALT TEXT"/>
     </div>
-    <div class="item" align = "center">
-      <!-- Your image here -->
-      <img src="static/images/ours/000000008690.jpg" alt="MY ALT TEXT"/>
-   </div>
   </div>
 </div>
 </div>
