--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/ColorDiff-Image" target="_blank"
+                    <a href="https://github.com/servuskk/ColorDiff-Image" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -112,7 +112,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                  <a href="http://arxiv.org/abs/2404.16678" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
@@ -275,6 +275,7 @@
 
 <section class="hero is-small">
   <div class="hero-body">
+    <div class="container">
     <h2 class="title is-3">Ablation</h2>
     <div class="container">
       <div class="columns is-centered has-text-centered">
@@ -282,7 +283,7 @@
         <!-- Your image here -->
         <img src="static/images/ablation-1.png" />
       </div>
-
+    </div>
   </div>
 </div>
 </div>
@@ -323,7 +324,14 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@misc{wang2024multimodal,
+        title={Multimodal Semantic-Aware Automatic Colorization with Diffusion Prior}, 
+        author={Han Wang and Xinning Chai and Yiwen Wang and Yuhong Zhang and Rong Xie and Li Song},
+        year={2024},
+        eprint={2404.16678},
+        archivePrefix={arXiv},
+        primaryClass={cs.CV}
+  }</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
